force-app/main/default/objects/GeneralParam__c/GeneralParam__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parâmetros utilizados para identificar o delta de exibição e exclusão de dados</description>
    <label>Parâmetro geral</label>
</CustomObject>