force-app/main/default/objects/GeneralParam__c/fields/AccessesMinute__c.field-meta.xml
<CustomField>
    <fullName>AccessesMinute__c</fullName>
    <label>Acessos por Minuto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>