force-app/main/default/objects/GeneralParam__c/fields/AccountJob__c.field-meta.xml
<CustomField>
    <fullName>AccountJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processar contas</label>
    <type>Checkbox</type>
</CustomField>