force-app/main/default/objects/GeneralParam__c/fields/AccountLoadDate__c.field-meta.xml
<CustomField>
    <fullName>AccountLoadDate__c</fullName>
    <label>Data da carga - Account</label>
    <type>DateTime</type>
</CustomField>