force-app/main/default/objects/GeneralParam__c/fields/AddressJob__c.field-meta.xml
<CustomField>
    <fullName>AddressJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processar endereços</label>
    <type>Checkbox</type>
</CustomField>