force-app/main/default/objects/GeneralParam__c/fields/AddressLoadDate__c.field-meta.xml
<CustomField>
    <fullName>AddressLoadDate__c</fullName>
    <label>Data de carga - Endereço</label>
    <type>DateTime</type>
</CustomField>