force-app/main/default/objects/GeneralParam__c/fields/AssetJob__c.field-meta.xml
<CustomField>
    <fullName>AssetJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processar Assets</label>
    <type>Checkbox</type>
</CustomField>