force-app/main/default/objects/GeneralParam__c/fields/AssetLoadDate__c.field-meta.xml
<CustomField>
    <fullName>AssetLoadDate__c</fullName>
    <label>Data da carga - Asset</label>
    <type>DateTime</type>
</CustomField>