force-app/main/default/objects/GeneralParam__c/fields/BatchSizePurgeServiceTransaction__c.field-meta.xml
<CustomField>
    <fullName>BatchSizePurgeServiceTransaction__c</fullName>
    <description>Campo destinado a definição do tamanho dos lotes (BatchSize) do batch PurgeServiceTransactionBatch. Exemplo: Se definido 20000 no campo, a cada query executada pelo batch, será considerado um LIMIT 20000</description>
    <label>Tamanho do lote de expurgo de ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>