force-app/main/default/objects/GeneralParam__c/fields/BillingAccountJob__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processar conta de faturamento</label>
    <type>Checkbox</type>
</CustomField>