force-app/main/default/objects/GeneralParam__c/fields/BillingAccountLoadDate__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountLoadDate__c</fullName>
    <label>Data da carga - Conta de faturamento</label>
    <type>DateTime</type>
</CustomField>