force-app/main/default/objects/GeneralParam__c/fields/CityBlockLot__c.field-meta.xml
<CustomField>
    <fullName>CityBlockLot__c</fullName>
    <label>Cidade quadra e lote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>