force-app/main/default/objects/GeneralParam__c/fields/CitySpecial__c.field-meta.xml
<CustomField>
    <fullName>CitySpecial__c</fullName>
    <label>Cidades especiais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>