force-app/main/default/objects/GeneralParam__c/fields/CreditConsultationExpiration__c.field-meta.xml
<CustomField>
    <fullName>CreditConsultationExpiration__c</fullName>
    <label>Vencimento da consulta de crédito(horas)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>