force-app/main/default/objects/GeneralParam__c/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <label>Segmento do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>