force-app/main/default/objects/GeneralParam__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Tipo do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>