force-app/main/default/objects/GeneralParam__c/fields/DaysPurgeSeviceTransaction__c.field-meta.xml
<CustomField>
    <fullName>DaysPurgeSeviceTransaction__c</fullName>
    <description>Campo destinado a parametrização de quantos dias o batch PurgeServiceTransacitionBatch irá considerar para expurgo, exemplo: Se configurado 30 no campo, o batch irá excluir os registros com mais de 30 dias na base</description>
    <label>Dias de expurgo de Service Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>