force-app/main/default/objects/GeneralParam__c/fields/InvoiceJob__c.field-meta.xml
<CustomField>
    <fullName>InvoiceJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processar Faturas</label>
    <type>Checkbox</type>
</CustomField>