force-app/main/default/objects/GeneralParam__c/fields/InvoiceLoadDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceLoadDate__c</fullName>
    <label>Data da carga - Faturas</label>
    <type>DateTime</type>
</CustomField>