force-app/main/default/objects/GeneralParam__c/fields/OrgTest__c.field-meta.xml
<CustomField>
    <fullName>OrgTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambiente de teste</label>
    <type>Checkbox</type>
</CustomField>