force-app/main/default/objects/GeneralParam__c/fields/PurgeObjects__c.field-meta.xml
<CustomField>
    <fullName>PurgeObjects__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Expurgar objetos dinamicamente</description>
    <inlineHelpText>Expurgar objetos dinamicamente</inlineHelpText>
    <label>Expurgar objetos dinamicamente</label>
    <type>Checkbox</type>
</CustomField>