force-app/main/default/objects/GeneralParam__c/fields/PurgeVlocityTrackingEntry__c.field-meta.xml
<CustomField>
    <fullName>PurgeVlocityTrackingEntry__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag para ligue/desligue de expurgo do objeto vlocity_cmt__VlocityTrackingEntry__c.</description>
    <label>Expurgar Vlocity Tracking Entry</label>
    <type>Checkbox</type>
</CustomField>