force-app/main/default/objects/GeneralParam__c/fields/ScriptDetailHistoryExpiration__c.field-meta.xml
<CustomField>
    <fullName>ScriptDetailHistoryExpiration__c</fullName>
    <label>Expiração do histórico de Script Detail</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>