force-app/main/default/objects/GeneralParam__c/fields/SearchRange__c.field-meta.xml
<CustomField>
    <fullName>SearchRange__c</fullName>
    <label>Intervalo de pesquisa</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>