force-app/main/default/objects/GeneralParam__c/fields/SearchRangeInvoice__c.field-meta.xml
<CustomField>
    <fullName>SearchRangeInvoice__c</fullName>
    <label>Intervalo de Pesquisa Faturas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>