force-app/main/default/objects/GeneralParam__c/fields/ServiceHistoryExpiration__c.field-meta.xml
<CustomField>
    <fullName>ServiceHistoryExpiration__c</fullName>
    <label>Expiração do histórico de atendimento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>