force-app/main/default/objects/GeneralParam__c/fields/TimeAutomaticTicketCall__c.field-meta.xml
<CustomField>
    <fullName>TimeAutomaticTicketCall__c</fullName>
    <description>Define o tempo de chamada automática da senha, em segundos, no Atendimento de Senha.</description>
    <inlineHelpText>Define o tempo de chamada automática da senha, em segundos, no Atendimento de Senha.</inlineHelpText>
    <label>Tempo de Chamada da Senha Automática</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>