force-app/main/default/objects/GeneralParam__c/fields/TimeAutomaticUpdateTickets__c.field-meta.xml
<CustomField>
    <fullName>TimeAutomaticUpdateTickets__c</fullName>
    <description>Define o tempo para atualização automática da lista senhas em espera, em segundos, no Atendimento de Senha.</description>
    <inlineHelpText>Define o tempo para atualização automática da lista senhas em espera, em segundos, no Atendimento de Senha.</inlineHelpText>
    <label>Tempo de atualização lista de senha</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>