force-app/main/default/objects/GeneralParam__c/fields/TokenExpirationDiscount__c.field-meta.xml
<CustomField>
    <fullName>TokenExpirationDiscount__c</fullName>
    <label>Desconto no tempo de expiração do Token</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>