force-app/main/default/objects/GeneralParam__c/fields/TotalNumberRecords__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberRecords__c</fullName>
    <label>Número Total de Registros</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>