force-app/main/default/objects/GeneralParam__c/fields/UpdatedPrimaryContactDays__c.field-meta.xml
<CustomField>
    <fullName>UpdatedPrimaryContactDays__c</fullName>
    <description>Dias parametrizados para atualizar os contatos principais no Account</description>
    <inlineHelpText>Dias parametrizados para atualizar os contatos principais no Account</inlineHelpText>
    <label>Dias contatos principais atualizados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>