force-app/main/default/objects/GeneralParam__c/fields/UpdatedPrimaryContactLimit__c.field-meta.xml
<CustomField>
    <fullName>UpdatedPrimaryContactLimit__c</fullName>
    <description>Limite de contatos principais atualizados no Account</description>
    <inlineHelpText>Limite de contatos principais atualizados no Account</inlineHelpText>
    <label>Limite contatos principais atualizados</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>