force-app/main/default/objects/GeneralParam__c/fields/ViewFieldServiceStoreService__c.field-meta.xml
<CustomField>
    <fullName>ViewFieldServiceStoreService__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Visualização do campo Serviço do componente de gerenciamento de senhas.</description>
    <inlineHelpText>Visualização do campo Serviço do componente de gerenciamento de senhas.</inlineHelpText>
    <label>Visualização do campo Serviço</label>
    <type>Checkbox</type>
</CustomField>